# wolram

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  wolram.toml.example
.github/workflows/: branch-release.yml  ci.yml
docs/: architecture.md  rust-class.md  rust-ecosystem-research.md
src/: cli.rs  config.rs  error.rs  git.rs  main.rs  orchestrator.rs  router.rs  todo.rs  ui.rs
src/anthropic/: client.rs  error.rs  mod.rs  types.rs
src/state_machine/: job.rs  mod.rs  state.rs
wiki/: README.md
wiki/en/: Anthropic-Client.md  Architecture.md  CLI-Reference.md  Configuration.md  Contributing.md  Getting-Started.md  Git-Integration.md  Home.md  Router-and-Skills.md  State-Machine.md  Testing.md
wiki/pt-br/: Anthropic-Client.md  Architecture.md  CLI-Reference.md  Configuration.md  Contributing.md  Getting-Started.md  Git-Integration.md  Home.md  Router-and-Skills.md  State-Machine.md  Testing.md
