[package]
name = "wolram"
version = "0.1.0"
edition = "2024"
description = "Enterprise-grade AI development orchestrator"
license = "MIT"
repository = "https://github.com/wolram/wolram"
homepage = "https://wolram.com.br"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
git2 = "0.20"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
console = "0.15"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
